added react snap-scroll effect / outlined sections / removed side scroll bar

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@ npm run deploy -->
       * {
         font-family: 'Roboto', sans-serif;
         margin: 0;
+        overflow-x: hidden;
       }
     </style>
   </head>
